--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,13 @@
             <artifactId>lift-json_2.11</artifactId>
             <version>3.0-M8</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.2</version>
+        </dependency>
+
 
     </dependencies>
     
